# mesh

./: .gitignore  .justfile  Makefile  README.md  branch-notes.txt  device-config-example.yaml  main.txt  notes  reading_log.txt  recommended_reading.txt  test_api.py  vector.h
_daisy/: .bazelrc  .clang-format  .gitignore  .justfile  BUILD  README.md  WORKSPACE  migrate-to-BZLMOD.txt  wicnlein.bazel
_daisy/build_work/: BUILD  extensions.bzl
_daisy/flatbuffers/: model_and_tensor.fbs  model_and_tensor.grpc.fb.cc  model_and_tensor.grpc.fb.h  model_and_tensor_generated.h
_daisy/include/: log.h
_daisy/migrate-to-MODULE/: .gitignore  MODULE.bazel  extensions.bzl  grpc_external_build.patch
_daisy/notes/: scratch.md
_daisy/proto/: heartbeat.proto  messaging.proto  networking.proto
_daisy/src/: inference.cc  log.cc  main.cc  networking.cc
_daisy/tests/: .gitignore  Makefile  client.py  fbs.cc  flatbuffers-test-client.cc  torch.cc
_daisy/torchscript/: example.py
autodiff/: notes.txt  run.txt
autodiff/dev/: README.md  derivative_basics.ipynb  test.ipynb
autodiff/src/: main.rs
id/src/: main.rs
noel/: notes.txt
notes/: branch notes.md  intuition.md  running autodiff.md  similar projects.md  testing graph gen.md
notes/.obsidian/: workspace.json
src/: .Mesh..swp  Device.c  Device.h  Mesh.c  Mesh.h  device.c  device.h  mesh.c  mesh.h  neon_test.c  test.c
src/APIs/: ctesthello.c  (+1 more)
test/: CUDA_ops.h  Device.h  Makefile  Mesh.h  NATURAL_ops.h  String_H.h  Tensor.h  a.out  context.c  mesh.txt  test.c
torch_build_tests/: CMakeCache.txt  CMakeLists.txt
(+42 files in other folders)
